# italia

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.github/workflows/: deploy.yaml  deploy.yml  tests.yaml
italia/: __init__.py  story.py  team.py
tests/: test_italia.py
