[project]
name = "italia"
version = "0.2.1"
description = "A fun package celebrating the Python Italia association and PyCon Italia"
authors = [{ name = "Python Italia", email = "help@pycon.it" }]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = ["pytest>=8.2.0"]
linters = ["ruff>=0.4.4", "pre-commit>=3.5.0"]
